--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fastify/cors": "^10.0.1",
     "@fastify/jwt": "^9.0.1",
     "@fastify/multipart": "^9.0.1",
+    "@fastify/static": "^8.0.2",
     "@prisma/client": "^5.20.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.5.5",
